nesc-frontend/src/test/resources/integration/programs/bad/bad22/C.nc
/* A command from an interface not implemented. */

configuration C
{
}
implementation
{
   components M;
}
